Add Comfort Tei account details to login list

--- a/loginaccounts.html
+++ b/loginaccounts.html
@@ -290,6 +290,7 @@ body, html {
       { username: "Stacy Garner", password: "Stacy@79", redirect: "gdhxgccvgf5fxcv234-garner-stacy-account-open.html" },
       { username: "Stacy Garner", password: "Stacy@69", redirect: "gdhxgccvgf5fxcv234-sstacy-garner-account-open.html" },
       { username: "Stacy Garner", password: "Stacy@59", redirect: "gdhxgccvgf5fxcv234-stacy-garner-account-open.html" },
+       { username: "Comfort Tei", password: "Comfort@69", redirect: "gdhxgccvgf5fxcv234-comfort-account-open.html" },
       
     ];
 
