--- a/gdhxgccvgf5fxcv234-comfort-account-open.html
+++ b/gdhxgccvgf5fxcv234-comfort-account-open.html
@@ -246,7 +246,7 @@
     </tr>
     <tr>
       <td style="padding: 10px; border: 1px solid #ccc;">Account Number</td>
-      <td style="padding: 10px; border: 1px solid #ccc;">000007626444</td>
+      <td style="padding: 10px; border: 1px solid #ccc;">#000007626444</td>
     </tr>
     <tr>
       <td style="padding: 10px; border: 1px solid #ccc;">Current Balance</td>
