--- a/success.html
+++ b/success.html
@@ -68,7 +68,8 @@
 <body>
     <div class="container">
         <h1>Thank You!</h1>
-        <p>Your message has been successfully sent. We will get back to you as soon as possible.</p>
+        <p>Your message has been successfully sent.</p>
+        <p><small>We appreciate you reaching out.</small></p>
         <p><a href="index.html">Return to Homepage</a></p>
     </div>
 </body>
